--- a/artifacts/example.yaml
+++ b/artifacts/example.yaml
@@ -3,4 +3,12 @@ kind: UpgradeKube
 metadata:
   name: example-kube1
 spec:
-
+  deploymentTemplate:
+    imageName: nginx:alpine
+    name: nginx
+    namespace: default
+    replicas: 3
+  serviceTemplate:
+    name: nginx-svc
+    type: NodePort
+    servicePort: 80
